# fast_api_user_guide

./: 15_return_type.py  16_extra_models.py  20_request_files.py  22_handling_errors.py  25_body_updates.py  26_dependencies.py  2_path_parameters.py  3_query_parameters.py  6_Query_parameters_string_validations.py  7_path_params_numeric_validations.py  README.md  main.py  pyproject.toml  sql_app.db
app/: main.py
lessons/: 10_nested_models.py  11_declare_request_example_data.py  12_extra_data_types.py  14_header_params.py  17_response_status_code.py  23_path_operation_config.py  27_classes_as_dependencies.py  5_request_body.py  8_body_multiple_params.py
