[tool.poetry]
name = "fast-api-user-guide"
version = "0.1.0"
description = ""
authors = ["Alex_alonso_86 <aalonsocanales@gmail.com>"]
readme = "README.md"
packages = [{include = "fast_api_user_guide"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.108.0"}
SQLAlchemy = "^2.0.25"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
